tests/ui/rust-2024/unsafe-attributes/unsafe-attributes.edition2024.stderr
error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes.rs:7:3
   |
LL | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(no_mangle)]
   |   +++++++         +

error: aborting due to 1 previous error

